syntax = "proto3";
package coreum.dex.v1;

import "coreum/dex/v1/order.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/CoreumFoundation/coreum/v4/x/dex/types";
option (gogoproto.goproto_getters_all) = false;

// Msg defines the Msg service.
service Msg {
  // PlaceOrder is a method to place an order on orderbook.
  rpc PlaceOrder(MsgPlaceOrder) returns (EmptyResponse);
}

// MsgPlaceOrder defines message to place an order on orderbook.
message MsgPlaceOrder {
  // sender is message sender/signer.
  string sender = 1;
  // order is an order to place on orderbook.
  Order order = 2;
}

message EmptyResponse {}
